# Cos3711_assn_02

ReceiverApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
StoreApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  senderthread.cpp  senderthread.h
